--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,102 @@
-.App {
-  text-align: center;
+.body {
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    margin-top: 7em;
+    background: #eff1f3;
+    box-shadow: 13px 13px 20px #cbced1, -13px -13px 20px #ffffff;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    width: 30%;
+    margin-left: 30em;
+    border-radius: 10px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.todo-edit{
+    margin-left: -40px;
+}
+.todo-edit:hover{
+    transform: scale(1.2);
+    color: blue;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.todo-delete{
+    margin-right: 10px;
+}
+.todo-delete:hover{
+    transform: scale(1.2);
+    color: red;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.todo-title {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.App-link {
-  color: #61dafb;
+.add-icon {
+    font-size: 15px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.todo-addbtn {
+    outline: none;
+    border: none;
+    cursor: pointer;
+    font-size: 50px;
+    border-radius: 5px;
+    font-size: 20px;
+    font-weight: 700;
+    font-family: 'Lato', sans-serif;
+    color: #fff;
+    text-align: center;
+    background: #24cfaa;
+    box-shadow: 3px 3px 0px #dbdbdbb0, -3px -3px 8px #ffffff;
+    transition: 0.5s;
+}
+
+.todo-addbtn:hover {
+    background: #2fdbb6;
+}
+
+.todo-addbtn:active {
+    background: #1da88a;
+}
+
+.todo-input {
+    margin-right: 5px;
+    border-radius: 8px;
+    border: 1px solid #ccc;
+    margin-bottom: 30px;
+    box-shadow: inset 8px 8px 8px #e3e5e7, inset -8px -8px 8px #ffffff;
+    height: 25px;
+    text-align: center;
+}
+
+.todo-input:focus {
+    outline: none;
+}
+
+.todo-list {
+    margin-top: 10px;
+    padding-top: 5px;
+    width: 50%;
+    background-color: rgb(243, 243, 243);
+    margin-left: 7em;
+    height: 30px;
+    border: 0.2px solid rgba(0, 0, 0, 0);
+    border-radius: 8px;
+    box-shadow: 10px 10px 5px -6px rgba(0, 0, 0, 0.1);
+    -webkit-box-shadow: 10px 10px 5px -6px rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 10px 10px 5px -6px rgba(0, 0, 0, 0.1);
+    transition: .2s all;
+}
+
+.list-wrap {
+    list-style: none;
+}
+
+.todo-body:hover .todo-list:hover {
+    transform: scale(1.2);
+    filter: blur(0px);
+    opacity: 1;
+    
+    box-shadow: 0 8px 20px 0px rgba(0, 0, 0, 0.125);
 }
